<resources>
    <string name="app_name">decide.me</string>

    <string name="hello_world">What to do...</string>
    <string name="action_settings">Settings</string>
    <string name="decision_restaurant">Restaurant</string>
    <string name="decision_bar">Bar</string>
    <string name="decision_coffee">Cafe</string>
    <string name="driving">Driving?</string>
    <string name="decide">Decide!</string>
</resources>
