<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Decide">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:id="@+id/textView" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/switch1">

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decision_restaurant"
                android:id="@+id/restaurantButton"
                android:layout_alignTop="@+id/switch1"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="39dp"
                android:layout_marginEnd="39dp" />

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decision_coffee"
                android:id="@+id/cafeButton"
                android:layout_below="@+id/radioButton"
                android:layout_alignLeft="@+id/radioButton"
                android:layout_alignStart="@+id/radioButton" />

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decision_bar"
                android:id="@+id/barButton"
                android:layout_below="@+id/radioButton2"
                android:layout_alignLeft="@+id/radioButton2"
                android:layout_alignStart="@+id/radioButton2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/text_results"
            android:layout_gravity="left|right"
            android:elevation="5dp" />

    </RadioGroup>

    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driving"
            android:id="@+id/switch1"
        android:layout_gravity="right"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/radioGroup"
        android:layout_alignEnd="@+id/radioGroup" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decide"
            android:id="@+id/decideButton"
        android:layout_toStartOf="@+id/radioGroup"
        android:layout_gravity="right"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/switch1" />

</RelativeLayout>
